[gd_scene load_steps=2 format=3 uid="uid://ctjd1mbq30m3i"]

[ext_resource type="Script" path="res://Utility/new_enemy_spawner.gd" id="1_huxn0"]

[node name="NewEnemySpawner" type="Node2D"]
script = ExtResource("1_huxn0")

[node name="GlobalTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnRateTimer" type="Timer" parent="."]

[node name="EnemyBase" type="Node2D" parent="."]

[node name="ManagerBase" type="Node2D" parent="."]

[connection signal="timeout" from="GlobalTimer" to="." method="_on_global_timer_timeout"]
[connection signal="timeout" from="SpawnRateTimer" to="." method="_on_spawn_rate_timer_timeout"]
